# django-project-template

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: bot.py  conftest.py  manage.py
src/core/: exceptions.py  models.py  pagination.py  redis_client.py  repositories.py  settings.py  urls.py  utils.py  wsgi.py
src/firebase_auth/: apps.py  mixins.py
src/tests/: conftest.py
src/tests/api/v1/: base.py
src/tests/api/v1/users/: test_user.py
src/tests/factories/: base.py
src/tests/fixtures/: __init__.py
src/users/: admin.py  models.py  repositories.py  serializers.py  services.py  urls.py  utils.py  views.py
